Updated DactColorWell to open the dialog with the currently selected color

Also made the dialog model for more predictable behavior. And while doing so we no longer have to worry about this bug: http://bugreports.qt.nokia.com/browse/QTBUG-11188